-- Cabal file for HCraft
name:                hcraft
version:             0.0.1
synopsis:            Planetary renderer
license:             MIT
license-file:        LICENSE
author:              Nandor Licker
maintainer:          licker.nandor@gmail.com
copyright:           (C) 2013 Nandor Licker
category:            Game
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  cbits

executable hcraft
  main-is:           Main.hs
  c-sources:         cbits/simplex.c
  include-dirs:      include
  includes:          simplex.h
  build-depends:       base                 >= 4.6 && < 5
                     , transformers         >= 0.3
                     , bytestring           >= 0.10
                     , containers           >= 0.5
                     , GLFW                 >= 0.5
                     , OpenGL               >= 2.9
                     , OpenGLRaw            >= 1.4
                     , monad-loops          >= 0.4
                     , mtl                  >= 2.1.2
                     , filepath             >= 1.3
                     , random               >= 1.0
                     , vector               >= 0.10
                     , StateVar             >= 1.0
                     , unordered-containers >= 0.2
                     , hashable             >= 1.2
  extra-libraries:   png12
  ghc-options:       -O2 -funbox-strict-fields -fprof-auto -rtsopts
