-- Cabal file for HCraft
name:                hcraft
version:             0.0.1
synopsis:            Planetary renderer
license:             MIT
license-file:        LICENSE
author:              Nandor Licker
maintainer:          licker.nandor@gmail.com
copyright:           (C) 2013 Nandor Licker
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable hcraft
  main-is:           Main.hs
  build-depends:     base==4.6.0.1, transformers==0.3.0.0, bytestring==0.10.0.2, containers==0.5.0.0, GLFW==0.5.2.0, OpenGL==2.9.1.0, OpenGLRaw==1.4.0.0, monad-loops==0.4.2, mtl==2.1.2, filepath==1.3.0.1, random==1.0.1.1, vector==0.10.0.1, StateVar==1.0.0.0
  extra-libraries:   png
  ghc-options:       -O2
